@@ -3,6 +3,7 @@ package com.github.tobi.laa.reflective.fluent.builders.test.models.complex;
 import lombok.Getter;
 import lombok.Setter;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -25,6 +26,6 @@ public class GetAndAdd {
     private List<String> listSetterWrongType;
 
     public void setListSetterWrongType(final String... listSetterWrongType) {
-        this.listSetterWrongType = List.of(listSetterWrongType);
+        this.listSetterWrongType = Arrays.asList(listSetterWrongType);
     }
 }
